--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "zionn-investors",
+  "name": "zionn-admin-netlify",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-responsive-sidebar": "^0.1.16",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
